...
            android:layout_alignParentStart="true"
            android:layout_marginStart="214dp"
            android:layout_marginTop="126dp"
            android:background="@drawable/rectangle_1" />

        <Spinner
            android:id="@+id/main_card"
            android:layout_width="368dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="33dp"
            android:layout_marginTop="359dp"
            android:popupBackground="@android:color/white"
            android:dropDownWidth="368dp"
            android:spinnerMode="dropdown"
            android:gravity="center"
            android:background="@drawable/button"
            android:outlineProvider="background"
            android:clipToOutline="true"
            android:entries="@array/spinner_items"/>


        <Button
...
            android:layout_marginTop="558dp"
            android:gravity="top"
            android:text="@string/add_your_de"
            android:textAppearance="@style/add_your_de" />

        <EditText
            android:id="@+id/edit_description"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/add_desc"
            android:layout_marginStart="36dp"
            android:layout_marginTop="-25dp"
            android:layout_marginEnd="36dp"
...
